2016-07-22  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/pal-target.c (pal_to_rank): Implement.
	(pal_to_rank): Likewise.
	(pal_alloc): Likewise.
	(pal_free): Likewise.
	(pal_read_buf): Likewise.
	(pal_write_buf): Likewise.
	(pal_read_word): Likewise.
	(pal_write_word): Likewise.
	(pal_read_reg): Likewise.
	(pal_write_reg): Likewise.
	(pal_mread_word): Likewise.
	(pal_mwrite_word): Likewise.
	(pal_mread_buf): Likewise.
	(pal_mwrite_buf): Likewise.
	(pal_reset_system): Likewise.
	(pal_populate_platform): Likewise.
	(pal_init): Likewise.
	(pal_finalize): Likewise.
	(pal_open): Likewise.
	(pal_close): Likewise.
	(pal_load_group): Likewise.
	(pal_start_group): Likewise.
	(pal_get_raw_pointer): Likewise.

2016-07-22  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/esim-target.c (ee_get_raw_pointer_esim):
	Implement.
	(esim_target_ops): Use ee_get_raw_pointer as get_raw_pointer
	callback.

2016-07-22  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/e-loader.c (e_load): Simplify.
	(_e_default_load_group): Rename from e_load_group. Don't start
	program. Adjust arguments.
	(e_load_group): Implement. Use target callbacks.
	* e-hal/src/epiphany-hal.c (_e_default_start_group): Rename
	from ee_start_group. Adjust arguments.
	(e_start): Use target callback.
	(e_start_group): Use target callback.
	(native_taget_ops):
	* e-hal/src/esim-target.c (esim_target_ops): Use
	_e_default_load_group and _e_default_start_group as load_group
	and start_group native callbacks.
	* e-hal/src/esim-target.c (esim_target_ops): Likewise but for
	esim.

2016-07-22  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/epiphany-shm-manager.c (e_shm_init_esim_and_pal):
	Rename from e_shm_init_esim.
	(e_shm_init): Call e_shm_init_esim_and_pal for both esim and
	pal targets.
	(e_shm_alloc): Call device callback.
	(e_shm_attach): Likwise.
	(e_shm_get_shmtable): Support PAL target.
	(e_shm_put_shmtable): Likewise.
	* e-hal/src/epiphany-hal.c (shm_alloc_native): Move native
	specific code here from e_shm_alloc.